--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -10,6 +10,6 @@ jdbc_password=Sof158369.
 #jdbc_username=remote
 #jdbc_password=ynufe@ruilin
 
-#jdbc_url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=bishe
+#jdbc_url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=flower
 #jdbc_username=sa
 #jdbc_password=123456
