--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,7 +3,7 @@ validationQuery=SLECT 1
 #localhost_mysql82
 jdbc_url=jdbc:mysql://localhost:3306/flower_transaction?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
 jdbc_username=root
-jdbc_password=Sof158369.
+jdbc_password=******
 
 #remote_mysql82
 #jdbc_url=jdbc:mysql://154.12.19.104:3308/flower_transaction?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
